# Telenex-Robotics-Assignments

ass1/src/custom_interfaces/: CMakeLists.txt  package.xml
ass1/src/custom_interfaces/msg/: Telemetry.msg
ass1/src/robot_pkg/: package.xml  setup.py
ass1/src/robot_pkg/robot_pkg/: coordinator_node.py  telemetry_node.py
ass2/src/cus_pkg/: CMakeLists.txt  package.xml
ass2/src/cus_pkg/srv/: HarvestSchedule.srv
ass2/src/my_pkg/: package.xml  setup.py
ass2/src/my_pkg/my_pkg/: client.py  server.py
ass3/src/custom_interfaces/: CMakeLists.txt  package.xml
ass3/src/custom_interfaces/msg/: ObjectMetadata.msg
ass3/src/object_recognition_system/: package.xml  setup.cfg  setup.py
ass3/src/object_recognition_system/object_recognition_system/: robotic_arm_node.py  vision_node.py
ass4/src/cus_pkg/: package.xml  setup.cfg  setup.py
ass4/src/cus_pkg/cus_pkg/: client.py  server.py
ass4/src/my_pkg/: CMakeLists.txt  package.xml
ass4/src/my_pkg/srv/: CleaningStatus.srv
